<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
         <groupId>org.smartrplace.apps</groupId>
        <artifactId>util-public</artifactId>
        <version>0.9.0-SNAPSHOT</version>
    </parent>

    <groupId>org.smartrplace.apps</groupId>
    <artifactId>smartrplace-util-proposed</artifactId>
    <description>Util classes and models for OGEMA contributed from the smartrplace system</description>
	<name>Util classes and models from Smartrplace</name>
    <packaging>bundle</packaging>
    <version>0.9.0-SNAPSHOT</version>
    
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-scr-plugin</artifactId>
            </plugin>
             <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Import-Package>
                        org.json;version="[${org.json.version.min},${org.json.version.max})",
                        *</Import-Package>
  		                <Embed-Dependency>*;artifactId=jsch,jzlib;scope=compile|runtime</Embed-Dependency>
                     </instructions>
                  </configuration>
            </plugin>
            <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
        </plugins>
        <pluginManagement>
	        <plugins>
	            <plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-scr-plugin</artifactId>
					<version>1.26.0</version>
					<configuration>
						<outputDirectory>${project.build.outputDirectory}</outputDirectory>
					</configuration>
					<executions>
						<execution>
							<id>generate-scr-scrdescriptor</id>
							<phase>process-classes</phase>
							<goals>
								<goal>scr</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<extensions>true</extensions>
					<version>3.5.0</version>
					<executions>
						<execution>
							<id>bundle-manifest</id>
							<phase>generate-test-sources</phase>
							<goals>
								<goal>manifest</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
                
	        </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.compendium</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.apache.felix.scr.annotations</artifactId>
        </dependency>

        <dependency>
            <groupId>org.ogema.core</groupId>
            <artifactId>api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ogema.core</groupId>
            <artifactId>models</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ogema.tools</groupId>
            <artifactId>resource-utils</artifactId>
       </dependency>
       <dependency>
            <groupId>org.ogema.widgets</groupId>
            <artifactId>ogema-js-bundle</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ogema.widgets</groupId>
            <artifactId>widget-collection</artifactId>
        </dependency>  
        <dependency>
            <groupId>org.ogema.widgets</groupId>
            <artifactId>widget-experimental</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ogema.widgets</groupId>
            <artifactId>util-extended</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ogema.widgets</groupId>
            <artifactId>widget-collection</artifactId>
         </dependency>
        <dependency>
            <groupId>org.ogema.widgets</groupId>
            <artifactId>widget-experimental</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ogema.model</groupId>
            <artifactId>widget-models-experimental</artifactId>
            <version>2.2.2-SNAPSHOT</version>
        </dependency>
 		<dependency>
			<groupId>org.ogema.eval</groupId>
			<artifactId>timeseries-multieval-garo-base</artifactId>
		</dependency>
        <!-- <dependency>
            <groupId>org.ogema.sim</groupId>
            <artifactId>roomsimulation-service</artifactId>
            <version>2.2.2-SNAPSHOT</version>
        </dependency> -->
        
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.53</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jzlib</artifactId>
            <version>1.1.3</version>
        </dependency>
 		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient-osgi</artifactId>
            <version>4.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore-osgi</artifactId>
            <version>4.4.5</version>
        </dependency>
         <dependency>
            <groupId>org.ogema.model</groupId>
            <artifactId>fhg-proposed</artifactId>
            <version>2.2.2-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
